# atlas_recruitment_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/sensors_filters/share/sensors_filters/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml
install/sensors_filters/share/sensors_filters/config/: ekf_config.yaml
install/sensors_filters/share/sensors_filters/launch/: lidar2d.launch.py
sensors_filters/: CMakeLists.txt
sensors_filters/install/: local_setup.sh  setup.sh
sensors_filters/install/sensors_filters/share/sensors_filters/: local_setup.dsv  local_setup.sh  package.ps1  package.sh  package.zsh
sensors_filters/install/sensors_filters/share/sensors_filters/cmake/: sensors_filtersConfig.cmake
sensors_filters/launch/: lidar2d.launch.py  pcloud3d.launch.py  sensors_processing.launch.py
sensors_filters/log/: latest_build
sensors_filters/rviz/: scan_filter.rviz
sensors_filters/src/: imu_lowpass_filter.cpp  lidar2d_filter.cpp  pcloud_downsample.cpp
src/sensors_filters/: CMakeLists.txt
src/sensors_filters/config/: ekf_config.yaml  ekf_explanation.md  rtabmap_config.yaml  slam_toolbox_config.yaml  slam_tuning.md
src/sensors_filters/launch/: ekf.launch.py  lidar2d.launch.py  pcloud3d.launch.py  slam2d.launch.py  slam3d.launch.py
src/sensors_filters/maps/slam2d/: mapa_completo.pgm  mapa_completo.yaml  mapa_default.pgm  mapa_default.yaml  mapa_tunado.pgm  mapa_tunado.yaml
src/sensors_filters/results/: frames_2026-04-17_15.23.25.gv  frames_slam2d.gv  frames_with_ekf.gv  frames_without_ekf.gv  map_slam2d.pgm  map_slam2d.yaml
src/sensors_filters/rviz/: ekf.rviz  pcloud3d_filter.rviz  rtabmap_3d.rviz  slam2d.rviz
src/sensors_filters/slam2d_bag/: metadata.yaml  slam2d_bag.db3
src/sensors_filters/src/: pcloud_downsample.cpp
src/sensors_filters/tf2_frames/: frames_rtabmap.gv  frames_with_ekf.gv
